--- a/src/app.css
+++ b/src/app.css
@@ -1,24 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=REM:ital,wght@0,100..900;1,100..900&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "switzer", serif;
+    font-family: "marsden", sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 :root {
-    --dark: #0b0f21;
-    --light: #fafafa;
-    --accent: #4c6cec;
+    --black: #111111;
+    --grey: #1e1e1e;
+    --white: #ffffff;
+    --blue: #143ee2;
+    --red: #ae201f;
+    --green: #68a01b;
+    --yellow: #ebd62f;
 }
 
 @font-face {
-    font-family: 'switzer';
-    src: url('/fonts/switzer.woff2');
-    font-weight: medium;
+    font-family: "marsden";
+    src: url("/marsden/marsden-bold.woff2");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "marsden";
+    src: url("/marsden/marsden-regular.woff2");
 }
 
 a {
